# midnight-scavenger

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  README.md  config.toml  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
config/: donate_list.txt  mykey.hex  seed.txt
dashboard/: .env.example  Dockerfile  README.md  docker-compose.yml  index.html  package.json  server.js
db/: init.sql
src/: api_client.rs  config.rs  donations.rs  donations_manager.rs  keys.rs  main.rs  miner.rs  stats_client.rs  wallet.rs  wallet_container.rs
