[workspace]
members = [
    "backend",
]

[package]
name = "scavenger_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
httpmock = "0.8"
tokio = { version = "1", features = ["full"] }
ashmaize = { git = "https://github.com/input-output-hk/ce-ashmaize.git" }
cryptoxide = "0.4"
hex = "0.4"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
num_cpus = "1.16"
rand = { version = "0.8.5", features = ["std"] }
rand_chacha = "0.3"
bip39 = "1.1"
zeroize = "1.5"
parking_lot = "0.12"
ed25519-dalek = "2"
bech32 = "0.8"
blake2 = "0.10"
serde_cbor = "0.11"
ciborium = "0.2"
blake2b_simd = "0.5"
log = "0.4"
env_logger = "0.9"
nix = "0.30.1"


axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tower = "0.4"
dotenv = "0.15"
anyhow = "1.0"
