[package]
name = "stats_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serveur web
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Base de données Postgres
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Date et heure
chrono = { version = "0.4", features = ["serde"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"

headers = "0.3"
